<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/fr.alexdet.android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_background"
    android:orientation="vertical" >

    <TableRow
        android:id="@+id/TableRow01"
        style="@style/myeceparis_tableRow"
        android:layout_height="55dp" >

        <fr.alexdet.android.view.CustomFontTextView
            android:id="@+id/TextView01"
            style="@style/myeceparis_textView"
            android:lines="2"
            android:text="@string/goodbye"
            android:textSize="25sp"
            app:fontName="ChampagneBold" />
    </TableRow>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/ImageView02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/logo_ece"
            android:src="@drawable/logo" />

        <fr.alexdet.android.view.CustomFontTextView
            android:id="@+id/text_bienvenue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:padding="16dp"
            android:paddingBottom="10dp"
            android:text="@string/logout"
            android:textColor="@android:color/darker_gray"
            android:textSize="20sp"
            app:fontName="ChampagneBold" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/linearLayout12"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:padding="5dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textIsSelectable="false" />

        <Button
            android:id="@+id/buttonNo"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/textView1"
            android:background="@drawable/button"
            android:text="@string/no"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/buttonYes"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/textView1"
            android:background="@drawable/button"
            android:text="@string/yes"
            android:textColor="@android:color/white" />
    </RelativeLayout>

</LinearLayout>