<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/fr.alexdet.android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white_background"
    android:orientation="vertical" >

    <TableRow
        android:id="@+id/TableRow01"
        style="@style/myeceparis_tableRow"
        android:layout_height="@dimen/tableRowTitleHeight" >

        <fr.alexdet.android.view.CustomFontTextView
            android:id="@+id/TextView01"
            style="@style/myeceparis_textView"
            android:lines="2"
            android:text="@string/welcome"
            android:textSize="25sp"
            app:fontName="ChampagneBold" />
    </TableRow>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp" >

        <!-- <ImageView -->
        <!-- android:id="@+id/logo" -->
        <!-- android:layout_width="326dp" -->
        <!-- android:layout_height="0dp" -->
        <!-- android:layout_gravity="top|center" -->
        <!-- android:layout_marginTop="-16dp" -->
        <!-- android:layout_weight="0.33" -->
        <!-- android:contentDescription="@string/logo_ece" -->
        <!-- android:src="@drawable/logo" /> -->

        <TextView
            android:id="@+id/text_bienvenue"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_weight="0.03"
            android:gravity="center_horizontal"
            android:paddingBottom="10dp"
            android:text="@string/text_bienvenue" />

        <TextView
            android:id="@+id/credit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_weight="0.03"
            android:gravity="center_horizontal"
            android:paddingBottom="10dp"
            android:text="@string/credit" />
    </LinearLayout>

</LinearLayout>